Removing Glitch from Footer

--- a/views/host.html
+++ b/views/host.html
@@ -38,6 +38,6 @@
       </form>
     </main>
 
-    <footer>Made with <a href="https://glitch.com">Glitch</a>! by Lenny</footer>
+    <footer>Made by Lenny</footer>
   </body>
 </html>
