--- a/views/player.html
+++ b/views/player.html
@@ -26,6 +26,6 @@
       </button>
     </main>
 
-    <footer>Made with <a href="https://glitch.com">Glitch</a>! by Lenny</footer>
+    <footer>Made by Lenny</footer>
   </body>
 </html>
